# Danbooru-Favourites-Downloader

./: .dockerignore  .gitignore  Dockerfile  README.md  danbooru-force.py  database.py  docker-compose.yml  download_posts.py  main.py  pyproject.toml  requirements.txt  retry_downloading_failures.py
.github/workflows/: release.yml
pyinstaller/: danbooru_force.py  danbooru_normal.py  danbooru_retry.py
src/danbooru_favourites_downloader/: database.py  main.py
src/danbooru_file_downloader/: database.py  main.py
tests/: conftest.py  utils.py
tests/contract/: test_api_json_response_content.py
tests/integration/: conftest.py  test_select_posts_workflow.py
tests/unit/database/: test_context_manager.py  test_error_table_calls.py  test_key_value_table_calls.py  test_posts_table_calls.py  test_tables.py
tests/unit/main/: test_build_metadata.py  test_get_all_new_posts.py  test_handle_result.py  test_select_posts.py
