[project]
name = "danbooru_favourites_downloader"
version = "1.0.3"
description = "A package to download files from a danbooru.donmai.us account"
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
package = "danbooru_favourites_downloader.main:main"